components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__status_failed.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: status.render_text()
---
<scm status> [TMP]/scm/1001
model      : [TMP]/1001.mod
candidates : WT_CL, CRCL_CL, WT_V
status     : failed (updated [TIMESTAMP])
note       : reference model (base) failed after 2 attempt(s); the SCM process cannot start
rounds     :
  reference          base model failed after 2 attempt(s) [1 model(s), 1 retry]
records    : round_summary.{json,md} in each round dir; scm_summary.json and scm_decision_log.{csv,md} in the out dir; `scm summary` for the full record
