components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__status_paused_num_rounds.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: status.render_text()
---
<scm status> [TMP]/scm/1001
model      : [TMP]/1001.mod
candidates : WT_CL, CRCL_CL, WT_V
status     : paused (updated [TIMESTAMP])
note       : paused after 1 round(s) (num_rounds = 1); run `scm run` again to continue
phase      : forward
rounds     :
  reference          base model fitted (OFV 1000.000) [1 model(s)]
  forward_round1     added WT_CL (p = 7.744e-6, dOFV = -20.000) [3 model(s)]
records    : round_summary.{json,md} in each round dir; scm_decision_log.{csv,md} in the out dir
