components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__status_planned.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: text
---
<scm status> scm/1001
model      : 1001.mod
status     : planned · no rounds complete
direction  : forward -> backward
alphas     : forward 0.05, backward 0.001
cov step   : off
candidates : WT_CL, CRCL_CL, WT_V
note       : plan written; the SCM process has not started
