components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__summary_backward_phase.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
assertion_line: 993
expression: "render(SummaryOptions\n{ phase: Some(Direction::Backward), ..Default::default() })"
---
<scm summary> scm/1001   completed (updated [TIMESTAMP]) · forward -> backward · 5 rounds complete
model      : 1001.mod   alphas: forward 0.05, backward 0.001   cov step: off
candidates : WT_CL, CRCL_CL, WT_V
retained   : WT_CL
final model: final/1001_scm_final.mod (OFV 979.500)

backward_round1  ref OFV 974.000 · alpha 0.001 · crit dOFV 10.828 · dropped CRCL_CL (p = 1.431e-2, dOFV = +6.000)
  candidate             OFV       dOFV         p     flags
  CRCL_CL           980.000     +6.000     0.014     <- dropped
  WT_CL             995.000    +21.000    4.6e-6 *   kept

backward_round2  ref OFV 980.000 · alpha 0.001 · crit dOFV 10.828 · every covariate significant at alpha 0.001; backward elimination stopped
  candidate             OFV       dOFV         p     flags
  WT_CL            1000.000    +20.000    7.7e-6 *   kept

records    : scm_summary.{json,md} · round_summary.{json,md} in each round dir
