components/nonmem/src/scm/snapshots/nonmem__scm__snapshot_tests__summary_long.snap
---
source: components/nonmem/src/scm/snapshot_tests.rs
expression: summary_long
---
<scm summary> scm/1001
model      : 1001.mod
status     : completed (updated [AGE] ago) · 5 rounds complete
direction  : forward -> backward
alphas     : forward 0.05, backward 0.001
cov step   : off
candidates : WT_CL, CRCL_CL, WT_V
path       : +WT_CL (forward 1) -> +CRCL_CL (forward 2) -> -CRCL_CL (backward 1) => WT_CL
final model: final/1001_scm_final.mod (OFV 979.500)

reference        base model fitted (OFV 1000.000)
      base/1001_base.mod                           succeeded

forward_round1   added WT_CL (p = 7.744e-6, dOFV = -20.000)
                 ref OFV 1000.000 · alpha 0.05 · crit dOFV 3.841
                 reference base/1001_base.mod
                 retained before this round: none
                 retained after this round: WT_CL
  candidate             OFV       dOFV         p     flags
  WT_CL             980.000    -20.000    7.7e-6 *   <- selected
      est 0.250 (N/A) · CI95 N/A · df 1 · tries 1
      forward_round1/1001_wt_cl.mod                succeeded
  CRCL_CL           996.000     -4.000     0.046 *
      est 0.150 (N/A) · CI95 N/A · df 1 · tries 1
      forward_round1/1001_crcl_cl.mod              succeeded
  WT_V              999.000     -1.000     0.317
      est 0.050 (N/A) · CI95 N/A · df 1 · tries 1
      forward_round1/1001_wt_v.mod                 succeeded

forward_round2   added CRCL_CL (p = 1.431e-2, dOFV = -6.000) [1 retry]
                 ref OFV 980.000 · alpha 0.05 · crit dOFV 3.841
                 reference forward_round1/1001_wt_cl.mod
                 retained before this round: WT_CL
                 retained after this round: WT_CL, CRCL_CL
  candidate             OFV       dOFV         p     flags
  CRCL_CL           974.000     -6.000     0.014 *   <- selected
      est 0.150 (N/A) · CI95 N/A · df 1 · tries 1
      forward_round2/1001_crcl_cl.mod              succeeded
  WT_V              978.500     -1.500     0.221
      est 0.050 (N/A) · CI95 N/A · df 1 · tries 2
      forward_round2/1001_wt_v.mod                 no ofv
      forward_round2/1001_wt_v_try2.mod            succeeded

forward_round3   no candidate significant at alpha 0.05; forward selection stopped
                 ref OFV 974.000 · alpha 0.05 · crit dOFV 3.841
                 reference forward_round2/1001_crcl_cl.mod
                 retained before this round: WT_CL, CRCL_CL
                 retained after this round: WT_CL, CRCL_CL
  candidate             OFV       dOFV         p
  WT_V              973.000     -1.000     0.317
      est 0.050 (N/A) · CI95 N/A · df 1 · tries 1
      forward_round3/1001_wt_v.mod                 succeeded

backward_round1  dropped CRCL_CL (p = 1.431e-2, dOFV = +6.000)
                 ref OFV 974.000 · alpha 0.001 · crit dOFV 10.828
                 reference forward_round2/1001_crcl_cl.mod
                 retained before this round: WT_CL, CRCL_CL
                 dropped after this round: CRCL_CL
  candidate             OFV       dOFV         p     flags
  CRCL_CL           980.000     +6.000     0.014     <- dropped
      est 0.150 (N/A) · CI95 N/A · df 1 · tries 1
      backward_round1/1001_crcl_cl.mod             succeeded
  WT_CL             995.000    +21.000    4.6e-6 *   kept
      est 0.250 (N/A) · CI95 N/A · df 1 · tries 1
      backward_round1/1001_wt_cl.mod               succeeded

backward_round2  every covariate significant at alpha 0.001; backward elimination stopped
                 ref OFV 980.000 · alpha 0.001 · crit dOFV 10.828
                 reference backward_round1/1001_crcl_cl.mod
                 retained before this round: WT_CL
                 dropped after this round: none
  candidate             OFV       dOFV         p     flags
  WT_CL            1000.000    +20.000    7.7e-6 *   kept
      est 0.250 (N/A) · CI95 N/A · df 1 · tries 1
      backward_round2/1001_wt_cl.mod               succeeded

records    : scm_summary.{json,md} · round_summary.{json,md} in each round dir
